Реализация сайта с докой

--- a/site/package.json
+++ b/site/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rambler team",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^15.1.0",
+    "react-router": "^2.5.1",
+    "react-router-active-component": "^4.0.0-rc.0"
+  }
 }
