--- a/site/package.json
+++ b/site/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rambler-ui-docs",
-  "version": "0.0.1",
+  "name": "rambler-ui-site",
+  "version": "1.0.0",
   "description": "Rambler UI Docs",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,24 @@
   "author": "Rambler team",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.1.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-standalone": "^6.10.3",
+    "codemirror": "^5.16.0",
+    "core-decorators": "^0.12.3",
+    "doctrine": "^1.2.2",
+    "marked": "^0.3.5",
+    "react": "^0.14.8",
+    "react-codemirror": "^0.2.6",
+    "react-docgen": "^2.9.1",
     "react-router": "^2.5.1",
-    "react-router-active-component": "^4.0.0-rc.0"
+    "react-router-active-component": "^4.0.0-rc.0",
+    "recast": "^0.11.10",
+    "recompose": "^0.20.2",
+    "scroll-behavior": "^0.7.0"
   }
 }
