--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
     "react": "^0.14.8",
     "react-codemirror": "^0.2.6",
     "react-docgen": "^2.9.1",
+    "react-helmet": "^3.1.0",
     "react-router": "^2.5.1",
     "react-router-active-component": "^4.0.0-rc.0",
     "recast": "^0.11.10",
