--- a/package.json
+++ b/package.json
@@ -1,25 +1,42 @@
 {
   "name": "rambler-ui",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Rambler UI Components based on React.js",
   "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cd site && npm run dev",
+    "release": "npm run build && npm run release",
+    "build": "gulp build",
+    "build-site": "",
+    "release-site": ""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/highpower/rambler-ui.git"
+    "url": "git@gitlab.rambler.ru:rambler-ui/rambler-ui.git"
   },
   "author": "Rambler team",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/highpower/rambler-ui/issues"
+    "url": "https://gitlab.rambler.ru/rambler-ui/rambler-ui/issues"
   },
-  "homepage": "https://github.com/highpower/rambler-ui#readme",
+  "homepage": "https://gitlab.rambler.ru/rambler-ui/rambler-ui#readme",
+  "ghPagesRepository": {
+    "url": "git+https://github.com/highpower/rambler-ui.git"
+  },
   "dependencies": {
+    "lodash": "^4.13.1",
     "recompose": "^0.20.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^0.11.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-postcss": "^6.1.1",
+    "gulp-replace": "^0.5.4",
+    "postcss": "^5.0.21",
+    "postcss-autoreset": "^1.1.5",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-modules": "^0.5.0",
+    "precss": "^1.4.0"
   }
 }
