--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,8 @@
   "description": "Rambler UI Docs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "dev",
+    "build": "build"
   },
   "author": "Rambler team",
   "license": "ISC",
