--- a/site/package.json
+++ b/site/package.json
@@ -4,12 +4,15 @@
   "description": "Rambler UI Docs",
   "main": "index.js",
   "scripts": {
-    "dev": "dev",
+    "dev": "NODE_ENV=development node webpack/server.js",
     "build": "build"
   },
   "author": "Rambler team",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -17,10 +20,25 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-standalone": "^6.10.3",
+    "classnames": "^2.2.5",
     "codemirror": "^5.16.0",
     "core-decorators": "^0.12.3",
+    "css-loader": "^0.23.1",
     "doctrine": "^1.2.2",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "flat": "^2.0.1",
+    "gulp": "^3.9.1",
+    "highlight.js": "^9.5.0",
+    "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
+    "lodash": "^4.13.1",
     "marked": "^0.3.5",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-loader": "^0.9.1",
+    "postcss-modules": "^0.5.0",
+    "postcss-simple-vars": "^3.0.0",
+    "raw-loader": "^0.5.1",
     "react": "^0.14.8",
     "react-codemirror": "^0.2.6",
     "react-docgen": "^2.9.1",
@@ -29,6 +47,9 @@
     "react-router-active-component": "^4.0.0-rc.0",
     "recast": "^0.11.10",
     "recompose": "^0.20.2",
-    "scroll-behavior": "^0.7.0"
+    "scroll-behavior": "^0.7.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
