--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.3.19",
+    "debug": "^2.2.0",
     "eslint": "^3.0.0",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-import-resolver-webpack": "^0.3.2",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.10.1",
     "eslint-plugin-react": "^5.2.2",
+    "flat": "^2.0.1",
     "gh-pages": "^0.11.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -59,11 +61,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "husky": "^0.11.4",
+    "mkdirp": "^0.5.1",
     "postcss": "^5.0.21",
     "postcss-autoreset": "^1.1.5",
     "postcss-cssnext": "^2.7.0",
+    "postcss-import": "^8.1.2",
     "postcss-modules": "^0.5.0",
-    "precss": "^1.4.0",
+    "postcss-simple-vars": "^3.0.0",
     "run-sequence": "^1.2.2"
   }
 }
