--- a/site/package.json
+++ b/site/package.json
@@ -35,6 +35,8 @@
     "lodash": "^4.13.1",
     "marked": "^0.3.5",
     "postcss-cssnext": "^2.7.0",
+    "postcss-font-grabber": "^1.0.6",
+    "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
     "postcss-modules": "^0.5.0",
     "postcss-simple-vars": "^3.0.0",
