--- a/site/package.json
+++ b/site/package.json
@@ -34,6 +34,7 @@
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
     "marked": "^0.3.5",
+    "normalize.css": "^4.2.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-font-grabber": "^1.0.6",
     "postcss-import": "^8.1.2",
