--- a/site/package.json
+++ b/site/package.json
@@ -39,6 +39,7 @@
     "postcss-font-grabber": "^1.0.6",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
+    "postcss-mixins": "^5.0.0",
     "postcss-modules": "^0.5.0",
     "postcss-simple-vars": "^3.0.0",
     "raw-loader": "^0.5.1",
