--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,8 @@
   "description": "Rambler UI Docs",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development node webpack/server.js"
+    "dev": "NODE_ENV=development node webpack/server.js",
+    "gh-pages": "gulp gh-pages"
   },
   "author": "Rambler team",
   "license": "ISC",
