--- a/site/package.json
+++ b/site/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development node webpack/server.js",
-    "gh-pages": "gulp gh-pages"
+    "gh-pages": "NODE_ENV=production gulp gh-pages"
   },
   "author": "Rambler team",
   "license": "ISC",
