--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss-import": "^8.1.2",
     "postcss-modules": "^0.5.0",
     "postcss-simple-vars": "^3.0.0",
+    "precss": "^1.4.0",
     "run-sequence": "^1.2.2"
   }
 }
