--- a/site/package.json
+++ b/site/package.json
@@ -47,6 +47,7 @@
     "postcss-mixins": "^5.0.0",
     "postcss-modules": "^0.5.0",
     "postcss-simple-vars": "^3.0.0",
+    "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react": "^0.14.8",
     "react-codemirror": "^0.2.6",
