--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "postcss-autoreset": "^1.1.5",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^8.1.2",
+    "postcss-mixins": "^5.0.0",
     "postcss-modules": "^0.5.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
