--- a/site/package.json
+++ b/site/package.json
@@ -34,6 +34,7 @@
     "gulp": "^3.9.1",
     "gulp-copy": "0.0.2",
     "highlight.js": "^9.5.0",
+    "history": "^2.1.2",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
@@ -49,15 +50,15 @@
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
-    "react": "^0.14.8",
+    "react": "^15.3.0",
     "react-codemirror": "^0.2.6",
     "react-docgen": "^2.9.1",
+    "react-dom": "^15.3.0",
     "react-helmet": "^3.1.0",
     "react-router": "^2.5.1",
     "react-router-active-component": "^4.0.0-rc.0",
     "recast": "^0.11.10",
     "recompose": "^0.20.2",
-    "scroll-behavior": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
