--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "jss": "^5.5.5",
+    "jss-isolate": "^1.0.0",
+    "jss-preset-default": "^0.5.0",
     "lodash": "^4.13.1",
-    "recompose": "^0.20.2"
+    "recompose": "^0.20.2",
+    "themed-react-jss": "^1.0.1"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
@@ -57,20 +61,11 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-eslint": "^3.0.0",
-    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "husky": "^0.11.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "postcss": "^5.0.21",
-    "postcss-autoreset": "^1.1.5",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^8.1.2",
-    "postcss-mixins": "^5.0.0",
-    "postcss-modules": "^0.5.0",
-    "postcss-simple-vars": "^3.0.0",
-    "precss": "^1.4.0",
     "run-sequence": "^1.2.2"
   }
 }
