--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.3.19",
     "debug": "^2.2.0",
+    "enzyme": "^2.4.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-import-resolver-webpack": "^0.3.2",
@@ -63,8 +64,18 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "husky": "^0.11.4",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^1.8.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "run-sequence": "^1.2.2"
+    "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "run-sequence": "^1.2.2",
+    "webpack": "^1.13.2"
   }
 }
