--- a/package.json
+++ b/package.json
@@ -66,10 +66,12 @@
     "gulp-replace": "^0.5.4",
     "husky": "^0.11.4",
     "jasmine-core": "^2.5.2",
+    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
