--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.1.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-lodash": "^3.1.4",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
