--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "cd site && npm run dev",
     "release": "npm run build && cd build && npm publish",
     "build": "NODE_ENV=production gulp build",
-    "precommit": "gulp precommit && npm run test",
-    "publish": "NODE_ENV=production gulp npm:publish"
+    "precommit": "gulp precommit && npm run test"
   },
   "repository": {
     "type": "git",
