--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jss": "^5.5.5",
     "jss-preset-default": "^0.5.0",
     "lodash": "^4.13.1",
+    "material-ui": "^0.16.4",
     "recompose": "^0.20.2",
     "themed-react-jss": "^1.0.4"
   },
