Add readme and homepage url to npm build

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://gitlab.rambler.ru/rambler-ui/rambler-ui/issues"
   },
-  "homepage": "https://gitlab.rambler.ru/rambler-ui/rambler-ui#readme",
+  "homepage": "https://rambler-digital-solutions.github.io/rambler-ui",
   "ghPagesRepository": {
     "url": "git+https://github.com/rambler-digital-solutions/rambler-ui.git"
   },
