--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS_custom",
+    "karma": "./node_modules/karma/bin/karma start --browsers Chrome",
     "dev": "cd site && npm run dev",
     "release": "npm run build && cd build && npm publish",
     "build": "NODE_ENV=production gulp build",
@@ -49,9 +50,10 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.3.19",
+    "color": "^1.0.3",
     "debug": "^2.2.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.0.0",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-import-resolver-webpack": "^0.3.2",
     "eslint-plugin-babel": "^3.3.0",
