--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url": "git+https://github.com/rambler-digital-solutions/rambler-ui.git"
   },
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
     "jss": "^5.5.5",
     "jss-preset-default": "^0.5.0",
@@ -44,16 +45,13 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-runtime": "^6.3.19",
     "color": "^1.0.3",
     "debug": "^2.2.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.18.0",
+    "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-import-resolver-webpack": "^0.3.2",
     "eslint-plugin-babel": "^3.3.0",
@@ -64,7 +62,6 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
-    "gulp-eslint": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "husky": "^0.11.4",
