--- a/.eslintrc
+++ b/.eslintrc
@@ -37,5 +37,6 @@
     no-nested-ternary: ["off"]
     import/no-unresolved: ["off"]
     func-names: ["off"]
+    radix: ["off"]
   settings:
     import/core-modules: [ react ]
