--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url": "git+https://github.com/rambler-digital-solutions/rambler-ui.git"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
     "jss": "^5.5.5",
