--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": ["es2015", "react", "stage-0"],
-  "plugins": ["transform-decorators-legacy", "lodash"],
+  "plugins": [
+    "transform-react-constant-elements",
+    "transform-react-inline-elements",
+    "transform-decorators-legacy",
+    "lodash"
+  ],
   "env": {
     "development": {}
   }
