--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "babel-plugin-lodash": "^3.1.4",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-polyfill": "^6.9.0",
     "babel-preset-env": "^1.3.2",
