--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
-    "jss": "^5.5.5",
-    "jss-preset-default": "^0.5.0",
+    "jss": "^8.1.0",
+    "jss-preset-default": "^3.0.0",
     "lodash": "^4.13.1",
-    "recompose": "^0.20.2",
-    "themed-react-jss": "^2.1.1"
+    "react-jss": "^7.1.0",
+    "recompose": "^0.20.2"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
