Косметические правки верстки, правки компонента OnOutsideClick, правки ресайзинга аватарок, правки формирования размеров галочек для чекбокса. Update eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     commonjs: true
     es6: true
     jasmine: true
-  extends: "airbnb-base"
+  extends: "eslint:recommended"
   parser: "babel-eslint"
   parserOptions:
     ecmaFeatures:
@@ -36,6 +36,8 @@
     no-underscore-dangle: ["error", { "allowAfterThis": true }]
     no-nested-ternary: ["off"]
     import/no-unresolved: ["off"]
+    import/extensions: ["off"]
+    import/no-extraneous-dependencies: ["off"]
     func-names: ["off"]
     radix: ["off"]
   settings:
