--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rambler-ui",
-  "version": "3.1.6",
+  "version": "3.2.0",
   "description": "Rambler UI Components based on React.js",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "dev": "cd site && npm run dev",
     "release": "npm run build && cd build && npm publish",
     "build": "NODE_ENV=production gulp build",
-    "precommit": "npm run eslint && npm run test",
+    "precommit": "eslint \"./**/*.js\" && npm run test",
     "eslint": "eslint \"./**/*.js\" --fix"
   },
   "repository": {
@@ -39,7 +39,7 @@
     "async": "^2.0.0-rc.6",
     "babel": "^6.5.2",
     "babel-core": "^6.9.0",
-    "babel-eslint": "^6.1.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-lodash": "^3.1.4",
     "babel-plugin-transform-decorators": "^6.8.0",
@@ -54,12 +54,11 @@
     "color": "^1.0.3",
     "debug": "^2.2.0",
     "enzyme": "^2.4.1",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint": "^4.7.2",
     "eslint-import-resolver-webpack": "^0.3.2",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.10.1",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.4.0",
     "flat": "^2.0.1",
     "gh-pages": "^0.11.0",
     "gulp": "^3.9.1",
