--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jss-preset-default": "^4.0.1",
     "lodash": "^4.13.1",
     "react-jss": "^8.1.0",
-    "recompose": "^0.20.2"
+    "recompose": "^0.26.0"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
@@ -53,7 +53,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "color": "^1.0.3",
     "debug": "^2.2.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.7.2",
     "eslint-import-resolver-webpack": "^0.3.2",
     "eslint-plugin-babel": "^3.3.0",
@@ -77,9 +78,8 @@
     "karma-webpack": "^1.8.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "react-test-renderer": "^16.0.0",
     "run-sequence": "^1.2.2",
     "webpack": "^1.13.2"
