--- a/site/package.json
+++ b/site/package.json
@@ -48,12 +48,13 @@
     "postcss-modules": "^0.5.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
+    "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
-    "react": "^15.5.4",
+    "react": "^16.2.0",
     "react-codemirror": "^1.0.0",
     "react-docgen": "^2.15.0",
-    "react-dom": "^15.5.4",
-    "react-helmet": "^3.1.0",
+    "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
     "recast": "^0.11.10",
     "recompose": "^0.26.0",
