RAMBLERUI-85 CI test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   - build
 
 before_script:
-  - git config --global user.email ${GITLAB_USER_EMAIL}"
+  - git config --global user.email "${GITLAB_USER_EMAIL}"
   - git config --global user.name "${GITLAB_USER_NAME}"
 
 
