RAMBLERUI-85 Test ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ before_script:
   - git config --global user.name "${GITLAB_USER_NAME}"
   - mkdir -p ~/.ssh
   - echo $CI_RUNNER_SSH_PRIVATE_KEY > ~/.ssh/id_rsa_gitlab
+  - chmod 600 ~/.ssh/id_rsa_gitlab
   - eval `ssh-agent -s`
   - ssh-add ~/.ssh/id_rsa_gitlab
   - ssh-add -D
