--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ build_site:
     - npm install
     - cd site
     - npm install
-    - ./ci-git-push-prepare git@gitlab.rambler.ru/rambler-ui/rambler-ui
+    - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
     - npm run gh-pages -- --omitGithub --versions "${CI_COMMIT_REF_NAME}"
     - cd ..
 
@@ -48,7 +48,7 @@ build_version:
     - npm install
     - cd site
     - npm install
-    - ./ci-git-push-prepare git@gitlab.rambler.ru/rambler-ui/rambler-ui
+    - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
     - npm run gh-pages -- --omitGithub --versions "${CI_COMMIT_TAG}"
     - cd ..
     - npm run build
