--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,9 +67,9 @@ pages:
   only:
     - /gh-pages/
   script:
-    - mkdir build
-    - rsync -rv --exclude=.git --exclude=node_modules --exclude=build . ./build
+    - mkdir public
+    - rsync -rv --exclude=.git --exclude=node_modules --exclude=public . ./public
   artifacts:
     untracked: false
     paths:
-      - 'build'
+      - 'public'
