--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "cd site && npm run dev",
     "release": "npm run build && cd build && npm publish",
     "build": "NODE_ENV=production gulp build",
-    "precommit": "eslint \"./**/*.js\" && npm run test",
+    "precommit": "eslint \"./**/*.js\"",
     "eslint": "eslint \"./**/*.js\"",
     "eslint:fix": "eslint \"./**/*.js\" --fix",
     "version": "cd site; gulp update-version; cd ..; git add .;"
