--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,12 +52,11 @@ build_version:
     - npm run gh-pages -- --omitGithub --versions "${CI_COMMIT_TAG}"
     - cd ..
     - npm run build
-    - npm config set registry https://art.rambler.ru/api/npm/rambler-common/
-    - curl -u${PROJECT_NPM_USER}:${PROJECT_NPM_AUTH_KEY} 'https://art.rambler.ru/api/npm/auth' > ~/.npmrc
+    - npm config set @rambler-common:registry https://art.rambler.ru/api/npm/rambler-common/
+    - curl -u${PROJECT_NPM_USER}:${PROJECT_NPM_AUTH_KEY} 'https://art.rambler.ru/api/npm/rambler-common/auth/rambler-ui' > ~/.npmrc
     - cd build
     - sed -i -e 's/\"rambler\-ui\"/\"@rambler\-common\/rambler\-ui\"/' ./package.json
     - npm publish
-    - npm config set registry https://art.rambler.ru/api/npm/npm-cache/
     - rm ~/.npmrc
 
 pages:
