--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,18 +46,30 @@ build_version:
   when: manual
   script:
     - npm install
+    - npm run build
+    - cd build
+    - curl -u${PROJECT_NPM_USER}:${PROJECT_NPM_AUTH_KEY} 'https://art.rambler.ru/api/npm/rambler-common/auth/rambler-ui' > ~/.npmrc
+    - node -e "var p=require('./package.json'); p.name='@rambler-common/rambler-ui'; p.publishConfig={registry:'https://art.rambler.ru/api/npm/rambler-common/'}; fs.writeFileSync('package.json', JSON.stringify(p));"
+    - npm publish
+    - rm ~/.npmrc
+    - cd ..
+
+build_version_site:
+  stage: build
+  tags:
+    - docker
+  except:
+    - /gh-pages/
+  only:
+    - tags
+  when: manual
+  script:
+    - npm install
     - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
     - cd site
     - npm install
     - npm run gh-pages -- --omitGithub --versions "${CI_COMMIT_TAG}"
     - cd ..
-    - npm run build
-    - npm config set @rambler-common:registry https://art.rambler.ru/api/npm/rambler-common/
-    - curl -u${PROJECT_NPM_USER}:${PROJECT_NPM_AUTH_KEY} 'https://art.rambler.ru/api/npm/rambler-common/auth/rambler-ui' > ~/.npmrc
-    - cd build
-    - sed -i -e 's/\"rambler\-ui\"/\"@rambler\-common\/rambler\-ui\"/' ./package.json
-    - npm publish
-    - rm ~/.npmrc
 
 pages:
   stage: setup
