--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,18 @@ stages:
   - setup
   - build
 
+# TODO: publish to gh-pages by rambler-ui-bot
 before_script:
   - git config --global user.email "${GITLAB_USER_EMAIL}"
   - git config --global user.name "${GITLAB_USER_NAME}"
 
 test:
   stage: setup
+  cache: &cache
+    key: "$CI_COMMIT_REF_NAME:node_modules"
+    paths:
+      - node_modules/
+    policy: push
   tags:
     - docker
   except:
@@ -19,24 +25,30 @@ test:
     - npm run eslint
     - npm run test
 
-build_site:
+build_package:
   stage: build
+  cache:
+    <<: *cache
+    policy: pull
   tags:
     - docker
   except:
     - /gh-pages/
+  only:
     - tags
   when: manual
   script:
     - npm install
-    - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
-    - cd site
-    - npm install
-    - npm run gh-pages -- --omitGithub --versions "${CI_COMMIT_REF_NAME}"
-    - cd ..
+    - npm run build
+    - cd build
+    - echo "//registry.npmjs.org/:_authToken=$UI_BOT_NPM_AUTH_TOKEN" > ~/.npmrc
+    - npm publish
 
-build_version:
+build_scoped_package:
   stage: build
+  cache:
+    <<: *cache
+    policy: pull
   tags:
     - docker
   except:
@@ -51,11 +63,28 @@ build_version:
     - curl -u${PROJECT_NPM_USER}:${PROJECT_NPM_AUTH_KEY} 'https://art.rambler.ru/api/npm/rambler-common/auth/rambler-common' > ~/.npmrc
     - node -e "var p=require('./package.json'); p.name='@rambler-common/rambler-ui'; p.publishConfig={registry:'https://art.rambler.ru/api/npm/rambler-common/'}; fs.writeFileSync('package.json', JSON.stringify(p, null, 2));"
     - npm publish
-    - rm ~/.npmrc
-    - cd ..
 
-build_version_site:
+build_site:
   stage: build
+  cache:
+    <<: *cache
+    policy: pull
+  tags:
+    - docker
+  except:
+    - /gh-pages/
+    - tags
+  when: manual
+  script:
+    - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
+    - npm install
+    - PAGES_ENV=gitlab npm run pages -- --versions "${CI_COMMIT_REF_NAME}"
+
+build_version_gitlab:
+  stage: build
+  cache:
+    <<: *cache
+    policy: pull
   tags:
     - docker
   except:
@@ -64,12 +93,26 @@ build_version_site:
     - tags
   when: manual
   script:
-    - npm install
     - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
-    - cd site
     - npm install
-    - npm run gh-pages -- --omitGithub --versions "${CI_COMMIT_TAG}"
-    - cd ..
+    - PAGES_ENV=gitlab npm run pages -- --versions "${CI_COMMIT_TAG}"
+
+# build_version_github:
+#   stage: build
+#   cache:
+#     <<: *cache
+#     policy: pull
+#   tags:
+#     - docker
+#   except:
+#     - /gh-pages/
+#   only:
+#     - tags
+#   when: manual
+#   script:
+#     - ./ci-git-push-prepare.sh git@github.com/rambler-digital-solutions/rambler-ui
+#     - npm install
+#     - PAGES_ENV=github npm run pages -- --versions "${CI_COMMIT_TAG}"
 
 pages:
   stage: setup
