--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,23 +42,6 @@ build_package:
     - cd build
     - echo "//registry.npmjs.org/:_authToken=$UI_BOT_NPM_AUTH_TOKEN" > ~/.npmrc
     - npm publish
-
-build_scoped_package:
-  stage: build
-  cache:
-    <<: *cache
-    policy: pull
-  tags:
-    - docker
-  except:
-    - /gh-pages/
-  only:
-    - tags
-  when: manual
-  script:
-    - npm install
-    - npm run build
-    - cd build
     - curl -u${PROJECT_NPM_USER}:${PROJECT_NPM_AUTH_KEY} 'https://art.rambler.ru/api/npm/rambler-common/auth/rambler-common' > ~/.npmrc
     - node -e "var p=require('./package.json'); p.name='@rambler-common/rambler-ui'; p.publishConfig={registry:'https://art.rambler.ru/api/npm/rambler-common/'}; fs.writeFileSync('package.json', JSON.stringify(p, null, 2));"
     - npm publish
@@ -75,7 +58,7 @@ build_site:
     - tags
   when: manual
   script:
-    - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
+    - ./ci-git-push-prepare.sh gitlab
     - npm install
     - npm run pages -- --versions "${CI_COMMIT_REF_NAME}"
 
@@ -92,13 +75,16 @@ build_version_gitlab:
     - tags
   when: manual
   script:
-    - ./ci-git-push-prepare.sh git@gitlab.rambler.ru/rambler-ui/rambler-ui
+    - ./ci-git-push-prepare.sh gitlab github
     - npm install
     - npm run pages -- --versions "${CI_COMMIT_TAG}"
-    # prepare github user ssh keys/git config
-    # - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
-    # - git push rds master
-    # - git push rds gh-pages
+    - git config --global user.email "${UI_BOT_EMAIL}"
+    - git config --global user.name "${UI_BOT_NAME}"
+    - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
+    - git push rds master
+    - git checkout gh-pages
+    - git pull origin gh-pages
+    - git push rds gh-pages
 
 pages:
   stage: setup
