--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,7 @@ image: portal-common-docker.art.rambler.ru/builder
 stages:
   - setup
   - build
-
-before_script:
-  - git config --global user.email "${GITLAB_USER_EMAIL}"
-  - git config --global user.name "${GITLAB_USER_NAME}"
+  - sync
 
 test:
   stage: setup
@@ -59,6 +56,8 @@ build_site:
   when: manual
   script:
     - ./ci-git-push-prepare.sh gitlab.rambler.ru "${SSH_PRIVATE_KEY}"
+    - git config --global user.email "${GITLAB_USER_EMAIL}"
+    - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
     - npm run pages -- --versions "${CI_COMMIT_REF_NAME}"
 
@@ -76,16 +75,10 @@ build_version_gitlab:
   when: manual
   script:
     - ./ci-git-push-prepare.sh gitlab.rambler.ru "${SSH_PRIVATE_KEY}"
+    - git config --global user.email "${GITLAB_USER_EMAIL}"
+    - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
     - npm run pages -- --versions "${CI_COMMIT_TAG}"
-    - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
-    - git config --global user.email "${UI_BOT_EMAIL}"
-    - git config --global user.name "${UI_BOT_NAME}"
-    - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
-    - git push rds master
-    - git checkout gh-pages
-    - git pull origin gh-pages
-    - git push rds gh-pages
 
 pages:
   stage: setup
@@ -100,3 +93,17 @@ pages:
     untracked: false
     paths:
       - 'public'
+
+sync:
+  stage: sync
+  tags:
+    - docker
+  only:
+    - master
+    - /gh-pages/
+  script:
+    - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
+    - git config --global user.email "${UI_BOT_EMAIL}"
+    - git config --global user.name "${UI_BOT_NAME}"
+    - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
+    - git push rds "${CI_COMMIT_REF_NAME}"
