--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ build_site:
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
-    - npm run pages -- --versions "${CI_COMMIT_REF_NAME}"
+    - npm run pages -- --versions "${CI_COMMIT_REF_NAME}" --include "{.gitignore,.gitlab-ci.yml,ci-git-push-prepare.sh}"
 
 build_version_site:
   stage: build
@@ -77,7 +77,7 @@ build_version_site:
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
-    - npm run pages -- --versions "${CI_COMMIT_TAG}"
+    - npm run pages -- --versions "${CI_COMMIT_TAG}" --include "{.gitignore,.gitlab-ci.yml,ci-git-push-prepare.sh}"
 
 pages:
   stage: setup
@@ -93,8 +93,8 @@ pages:
     paths:
       - 'public'
 
-sync_mirror:
-  stage: build
+sync:
+  stage: setup
   tags:
     - docker
   only:
