--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,10 +98,10 @@ sync:
   tags:
     - docker
   only:
-    - /^(master|gh-pages)$/
+    - master
+    - /^gh-pages$/
+  when: manual
   script:
     - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
-    - git config --global user.email "${UI_BOT_EMAIL}"
-    - git config --global user.name "${UI_BOT_NAME}"
     - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
     - git push rds "${CI_COMMIT_REF_NAME}"
