--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,9 +78,11 @@ build_version_site:
     - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
     - npm run pages -- --versions "${CI_COMMIT_TAG}" --include "{.gitignore,.gitlab-ci.yml}"
+    - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
+    - git config --global user.email "${UI_BOT_EMAIL}"
+    - git config --global user.name "${UI_BOT_NAME}"
     - git fetch origin
     - git checkout -b gh-pages origin/gh-pages
-    - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
     - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
     - git push rds gh-pages
 
@@ -93,6 +95,8 @@ mirror:
   when: manual
   script:
     - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
+    - git config --global user.email "${UI_BOT_EMAIL}"
+    - git config --global user.name "${UI_BOT_NAME}"
     - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
     - git push rds master
 
