--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ build_version_site:
     - git config --global user.name "${UI_BOT_NAME}"
     - git fetch origin
     - git checkout -b gh-pages origin/gh-pages
-    - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
+    - git remote -v | grep 'rds' 1> /dev/null || git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
     - git pull rds gh-pages
     - git push rds gh-pages
 
@@ -98,7 +98,7 @@ mirror:
     - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
     - git config --global user.email "${UI_BOT_EMAIL}"
     - git config --global user.name "${UI_BOT_NAME}"
-    - git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
+    - git remote -v | grep 'rds' 1> /dev/null || git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
     - git pull rds master
     - git push rds master
 
