--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ build_site:
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
-    - npm run pages -- --versions "${CI_COMMIT_REF_NAME}" --include "{.gitignore,.gitlab-ci.yml}"
+    - npm run pages -- --versions "${CI_COMMIT_REF_NAME}" --include ".gitignore"
 
 build_version_site:
   stage: build
@@ -75,7 +75,7 @@ build_version_site:
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
-    - npm run pages -- --versions "${CI_COMMIT_TAG}" --include "{.gitignore,.gitlab-ci.yml}"
+    - npm run pages -- --versions "${CI_COMMIT_TAG}" --include ".gitignore"
     - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
     - git config --global user.email "${UI_BOT_EMAIL}"
     - git config --global user.name "${UI_BOT_NAME}"
