--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: portal-common-docker.art.rambler.ru/builder
 stages:
   - setup
   - build
+  - mirror
 
 test:
   stage: setup
@@ -76,28 +77,22 @@ build_version_site:
     - git config --global user.name "${GITLAB_USER_NAME}"
     - npm install
     - npm run pages -- --versions "${CI_COMMIT_TAG}" --include ".gitignore"
-    - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
-    - git config --global user.email "${UI_BOT_EMAIL}"
-    - git config --global user.name "${UI_BOT_NAME}"
-    - git fetch origin
-    - git checkout -b gh-pages origin/gh-pages
-    - git remote -v | grep 'rds' 1> /dev/null || git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
-    - git pull rds gh-pages
-    - git push rds gh-pages
 
 mirror:
-  stage: build
+  stage: mirror
   tags:
     - docker
   only:
     - master
+    - tags
+  except:
+    - /^gh-pages$/
   script:
     - ./ci-git-push-prepare.sh github.com "${UI_BOT_SSH_PRIVATE_KEY}"
     - git config --global user.email "${UI_BOT_EMAIL}"
     - git config --global user.name "${UI_BOT_NAME}"
-    - git remote -v | grep 'rds' 1> /dev/null || git remote add rds git@github.com:rambler-digital-solutions/rambler-ui.git
-    - git pull rds master
-    - git push rds master
+    - git fetch --prune
+    - git push --prune git@github.com:rambler-digital-solutions/rambler-ui.git +refs/remotes/origin/*:refs/heads/*
 
 pages:
   stage: setup
