--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
     "url": "git+https://github.com/rambler-digital-solutions/rambler-ui.git"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
     "jss": "^9.4.0",
     "jss-preset-default": "^4.0.1",
     "lodash": "^4.13.1",
-    "react-jss": "^8.1.0",
-    "recompose": "^0.26.0"
+    "react-jss": "^8.1.0"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
@@ -49,7 +47,7 @@
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-polyfill": "^6.9.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "color": "^1.0.3",
