--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,7 @@
   "presets": ["es2015", "react", "stage-0"],
   "plugins": [
     "transform-react-constant-elements",
-    "transform-decorators-legacy",
-    "lodash"
+    "transform-decorators-legacy"
   ],
   "env": {
     "development": {}
