--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
-    "jss": "^9.4.0",
+    "deepmerge": "^2.1.0",
+    "jss": "^9.8.1",
     "jss-preset-default": "^4.0.1",
-    "lodash": "^4.13.1",
-    "react-jss": "^8.1.0"
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
+    "react-jss": "^8.3.5"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
@@ -41,7 +43,6 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^6.2.5",
-    "babel-plugin-lodash": "^3.1.4",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
