--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers PhantomJS_custom",
-    "karma": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --browsers Chrome",
-    "build": "NODE_ENV=production gulp build",
+    "karma": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers Chrome",
+    "prebuild": "rm -rf build",
+    "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/__doc__,**/__test__",
+    "postbuild": "cp package.json .npmignore README.md build",
     "dev": "NODE_ENV=development playground server",
     "pages": "NODE_ENV=production playground pages --publish",
     "eslint": "eslint '**/*.js'",
@@ -38,13 +40,13 @@
     "react-jss": "^8.3.5"
   },
   "devDependencies": {
-    "async": "^2.0.0-rc.6",
-    "babel": "^6.5.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-inline-environment-variables": "^0.3.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-polyfill": "^6.9.0",
@@ -60,10 +62,6 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.4.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-clean": "^0.3.2",
-    "gulp-replace": "^0.5.4",
     "husky": "^0.11.4",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
@@ -74,12 +72,10 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "lint-staged": "^6.1.0",
-    "minimist": "^1.2.0",
     "rambler-ui-playground": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.0.0",
-    "run-sequence": "^1.2.2",
     "size-limit": "^0.16.1",
     "webpack": "^1.13.2"
   },
