RAMBLERUI-134 move test files

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers PhantomJS_custom",
     "karma": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers Chrome",
     "prebuild": "rm -rf build",
-    "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/__doc__,**/__test__",
+    "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
     "postbuild": "cp package.json .npmignore README.md build",
     "dev": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
+    "site": "NODE_ENV=production webpack -p --progress --config docs/webpack.config.js",
     "pages": "NODE_ENV=production playground pages --publish",
     "eslint": "eslint '**/*.js'",
     "size": "size-limit",
