RAMBLERUI-134 generate prop types table from markdown

--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "recast": "^0.14.7",
+    "remark": "^9.0.0",
     "remark-highlight.js": "^5.0.0",
+    "remark-html": "^7.0.0",
     "size-limit": "^0.16.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
