--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Rambler UI Components based on React.js",
   "main": "index.js",
   "scripts": {
-    "test": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers PhantomJS_custom",
-    "karma": "/usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers Chrome",
+    "test": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers PhantomJS_custom",
+    "karma": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers Chrome",
     "prebuild": "rm -rf build",
     "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
     "postbuild": "cp package.json .npmignore README.md build",
@@ -44,6 +44,7 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.4",
+    "babel-plugin-istanbul": "^5.0.1",
     "babel-plugin-preval": "^1.6.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.8.0",
@@ -75,6 +76,7 @@
     "json-loader": "^0.5.7",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.2",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
