Update headless screen sizes

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "karma": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
-    "test": "npm run karma -- --browsers ChromeHeadless",
-    "test:firefox": "npm run karma -- --browsers FirefoxHeadless",
-    "test:ci": "npm run karma -- --browsers ChromeHeadless,FirefoxHeadless",
-    "test:watch": "npm run karma -- --browsers ChromeHeadless --auto-watch --no-single-run",
+    "test": "npm run karma -- --browsers ChromeC",
+    "test:firefox": "npm run karma -- --browsers FirefoxC",
+    "test:ci": "npm run karma -- --browsers ChromeC,FirefoxC",
+    "test:watch": "npm run karma -- --browsers ChromeC --auto-watch --no-single-run",
     "prebuild": "rm -rf build",
     "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
     "postbuild": "cp package.json .npmignore README.md build",
