--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ install:
     - /^gh-pages$/
   script:
     - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm install
+    - echo "$(npm ls --depth 1)"
 
 test:
   image: dockerhub.art.rambler.ru/andrepolischuk/node-chrome-firefox
@@ -31,6 +32,7 @@ test:
   except:
     - /^gh-pages$/
   script:
+    - echo "$(npm ls --depth 1)"
     - npm run test:ci
     - npm run lint
     - npm run build
