--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.3.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.19",
     "babel-polyfill": "^6.9.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
